--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ h5,
 h6 {
   font-weight: 500;
 }
-.banner button {
+button.btn-main {
   all: unset;
   border: 1px solid #afaeae55;
   padding: 10px 20px;
@@ -91,7 +91,7 @@ h6 {
   cursor: pointer;
   transition: 0.5s;
 }
-.banner button:hover {
+button.btn-main:hover {
   background-color: #c691e6;
   color: #040018;
   box-shadow: 0 0 50px #c691e6;
@@ -370,4 +370,148 @@ h1.right {
   align-items: center;
   font-size: 50px;
   color: #d6f2f3;
+}
+
+.slide-image {
+  width: 100%;
+  height: 100vh;
+  padding: 50px;
+  overflow: hidden;
+  position: relative;
+}
+
+.container {
+  overflow: hidden;
+  border-radius: 10px;
+  position: absolute;
+  left: 50%;
+  top: 62%;
+  transform: translate(-50%, -50%);
+  width: 70%;
+  height: 480px;
+  padding: 50px;
+  box-shadow: 0 0 30px #c691e6;
+  /* background-color: #f5f5f5; */
+  /* box-shadow: 0 30px 50px #dbdbdb; */
+}
+.container #slide {
+  width: max-content;
+  margin-top: 50px;
+}
+.container .item {
+  width: 200px;
+  height: 300px;
+  background-position: 50% 50%;
+  display: inline-block;
+  transition: 0.5s;
+  background-size: cover;
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  transform: translate(0, -50%);
+  border-radius: 20px;
+  box-shadow: 0 30px 50px #505050;
+}
+.container .item:nth-child(1),
+.container .item:nth-child(2) {
+  left: 0;
+  top: 0;
+  transform: translate(0, 0);
+  border-radius: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: none;
+}
+.container .item:nth-child(3) {
+  left: 50%;
+}
+.container .item:nth-child(4) {
+  left: calc(50% + 220px);
+}
+.container .item:nth-child(5) {
+  left: calc(50% + 440px);
+}
+.container .item:nth-child(n + 6) {
+  left: calc(50% + 660px);
+  opacity: 0;
+}
+.container .item .content {
+  position: absolute;
+  top: 50%;
+  left: 100px;
+  width: 300px;
+  text-align: left;
+  color: #eee;
+  transform: translate(0, -50%);
+  display: none;
+  padding: 20px;
+  border-radius: 10px;
+  backdrop-filter: blur(10px);
+}
+.container .item .content .btn-main {
+  box-shadow: none;
+  padding: 10px 50px;
+}
+.container .item:nth-child(2) .content {
+  display: block;
+  z-index: 11111;
+}
+.container .item .name {
+  font-size: 40px;
+  font-weight: bold;
+  --to: right;
+  background-image: linear-gradient(to var(--to), #89a5df, #e46e7f, #e8e191);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  opacity: 0;
+  animation: showcontent 1s ease-in-out 1 forwards;
+}
+.container .item .des {
+  --to: top;
+  background-image: linear-gradient(to var(--to), #89a5df, #e46e7f, #e8e191);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin: 20px 0;
+  font-weight: 400;
+  opacity: 0;
+  animation: showcontent 1s ease-in-out 0.3s 1 forwards;
+}
+.container .item button {
+  padding: 10px 20px;
+  border: none;
+  opacity: 0;
+  animation: showcontent 1s ease-in-out 0.6s 1 forwards;
+}
+@keyframes showcontent {
+  from {
+    opacity: 0;
+    transform: translate(0, 100px);
+    filter: blur(33px);
+  }
+  to {
+    opacity: 1;
+    transform: translate(0, 0);
+    filter: blur(0);
+  }
+}
+.buttons {
+  position: absolute;
+  bottom: 30px;
+  z-index: 222222;
+  text-align: center;
+  width: 100%;
+}
+.buttons button {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #845b97;
+  border: 1px solid #fcfcfc37;
+  transition: 0.5s;
+}
+.buttons button i {
+  color: white;
+}
+.buttons button:hover {
+  background-color: #e2cd587e;
 }
